// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateBusinesses component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="col-md-3"
  />
  <div
    className="col-md-6"
    id="businesscontent"
  >
    <h3>
      Create a business
    </h3>
    <br />
    <form
      className="create-business-form"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label>
          Name:
        </label>
        <input
          className="field"
          name="business_name"
          required={true}
          type="text"
        />
      </div>
      <br />
      <div
        className="form-group"
      >
        <label>
          Location:
        </label>
        <input
          className="field"
          name="location"
          required={true}
          type="text"
        />
      </div>
      <br />
      <div
        className="form-group"
      >
        <label>
          Category:
        </label>
        <select
          className="field"
          name="category"
          required={true}
        >
          <option>
            Technology
          </option>
          <option>
            Tourism & Hotels
          </option>
          <option>
            Health
          </option>
          <option>
            Education
          </option>
          <option>
            Finance & Accounting
          </option>
          <option>
            Farming
          </option>
          <option>
            Ecommerse
          </option>
          <option>
            Real Estate
          </option>
          <option>
            Manufacturing
          </option>
        </select>
      </div>
      <br />
      <div
        className="form-group"
      >
        <label>
          About:
        </label>
        <br />
        <br />
        <textarea
          id="textarea"
          name="about"
          required={true}
          rows="8"
        />
      </div>
      <a
        style={
          Object {
            "float": "right",
            "marginTop": "180px",
          }
        }
      >
        <button
          className="btn btn-primary"
          type="submit"
        >
          Create
        </button>
      </a>
    </form>
  </div>
  <div
    className="col-md-3"
  />
  <Footer />
</div>
`;

exports[`Dashboard component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <DashboardContent />
  <Footer />
</div>
`;

exports[`EditBusiness component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="row"
  >
    <div
      className="col-md-3"
    />
    <div
      className="col-md-6"
      id="businesscontent"
    >
      <h3
        style={
          Object {
            "color": "break",
            "paddingLeft": "20px",
          }
        }
      >
        Edit my business
      </h3>
      <br />
      <form
        className="create-business-form"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label>
            Name:
          </label>
          <input
            className="field"
            name="name"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <br />
        <div
          className="form-group"
        >
          <label>
            Location:
          </label>
          <input
            className="field"
            name="location"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <br />
        <div
          className="form-group"
        >
          <label>
            Category:
          </label>
          <select
            className="field"
            name="category"
            onChange={[Function]}
            required={true}
          >
            <option />
            <option>
              Technology
            </option>
            <option>
              Tourism & Hotels
            </option>
            <option>
              Health
            </option>
            <option>
              Education
            </option>
            <option>
              Finance & Accounting
            </option>
            <option>
              Farming
            </option>
            <option>
              Ecommerse
            </option>
            <option>
              Real Estate
            </option>
            <option>
              Manufacturing
            </option>
          </select>
        </div>
        <br />
        <div
          className="form-group"
        >
          <label>
            About:
          </label>
          <br />
          <br />
          <textarea
            id="textarea"
            name="about"
            onChange={[Function]}
            required={true}
            rows="8"
            value=""
          />
        </div>
        <br />
        <a
          style={
            Object {
              "float": "right",
              "marginTop": "180px",
            }
          }
        >
          <button
            className="btn btn-primary"
            type="submit"
          >
            Update
          </button>
        </a>
      </form>
    </div>
    <div
      className="col-md-3"
    />
  </div>
  <Footer />
</div>
`;
